# databricks-config-insights

./: .gitignore  README.md  databricks.yml  pyproject.toml
docs/images/: README.md
resources/alerts/: config_alerts.yml
resources/dashboards/: config_insights.dashboard.yml  config_insights.lvdash.json
resources/jobs/: collector.job.yml
sql/: create_tables.sql
src/config_insights/: __init__.py  __main__.py  categorize.py  collector.py  discovery.py  monitoring.py  writer.py
